<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeItem"
        android:enabled="true"
        android:title="@string/home_item"
        android:icon="@drawable/home_icon_selector"/>

    <item
        android:id="@+id/newsItem"
        android:enabled="true"
        android:title="@string/news_item"
        android:icon="@drawable/news_icon_selector"/>

    <item
        android:id="@+id/chatItem"
        android:enabled="true"
        android:title="@string/chat_item"
        android:icon="@drawable/chat_icon_selector"/>

    <item
        android:id="@+id/userItem"
        android:enabled="true"
        android:title="@string/user_item"
        android:icon="@drawable/user_icon_selector"/>
</menu>