<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xxl"
        android:layout_marginEnd="@dimen/spacing_xxl"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!--Sign Up TextView-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_xl"
            android:text="@string/sign_up_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge" />

        <!--ID Number Text Field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/IDNumField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:hint="@string/id_number_label"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Name Text Field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:hint="@string/name_label"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Password Text Field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:hint="@string/password_label"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Retype PW Text Field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/retypePWField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_xl"
            android:hint="@string/retype_password_label"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Sign Up Button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text" />

        <!--To Sign In Page Button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/alreadyHadAccntBtn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_had_an_account_text"
            app:rippleColor="@android:color/transparent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>